--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,7 @@
 {
-  "name": "Voiture",
+  "name": "learning",
   "integrations": {
     "capacitor": {}
   },
-  "type": "react-vite",
-  "id": "6d4e3ffe"
+  "type": "react-vite"
 }
