--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voiture",
+  "name": "learning",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.6.0",
+    "@capacitor/core": "5.4.1",
     "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.7",
+    "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
@@ -28,23 +28,21 @@
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.6.0",
-    "@testing-library/dom": ">=7.21.4",
+    "@capacitor/cli": "5.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-legacy": "^5.0.0",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^4.0.1",
-    "cypress": "^13.5.0",
+    "cypress": "^12.7.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
-    "terser": "^5.4.0",
     "typescript": "^5.1.6",
-    "vite": "^5.0.0",
-    "vitest": "^0.34.6"
+    "vite": "^4.3.9",
+    "vitest": "^0.32.2"
   },
   "description": "An Ionic project"
 }
